--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,7 @@ services:
     container_name: jira_todo_api
     environment:
       - PORT=5000
+      - EXTERNAL_PORT=5001
       - MONGO_URI=mongodb://mongo:27017/jira-todo-app
       - JWT_SECRET=${JWT_SECRET}
       - JWT_EXPIRE=${JWT_EXPIRE}
