--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dev": "nodemon server.js",
     "test": "jest --runInBand"
   },
-   "jest": {
+  "jest": {
     "testEnvironment": "node",
     "setupFilesAfterEnv": [
       "./tests/setup.js"
@@ -23,7 +23,9 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.3.2"
+    "mongoose": "^8.3.2",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1"
   },
   "devDependencies": {
     "jest": "^30.2.0",
